# Spuncast-ML

./: .dockerignore  .env.example  .gitignore  067_ml_heat_dataset.sql  AGENTS.md  DEPENDENCIES.md  Dockerfile  IT_DIRECTOR_HANDOVER.md  ML_HANDOFF.md  README.md  docker-compose.yml  env.example  pyproject.toml  requirements (1).txt  requirements.txt  spuncast-scoring.service
app/: dashboard.py
deploy/: crontab-ml.example
docs/: ML_DEPLOYMENT_PLAN_POST_CHEMISTRY_AUDIT.md  SPUNCAST_ML_CONFIGURATION_GUIDE.md
grafana/: ml_active_heat_predictions.sql  ml_causation_insights.sql  ml_model_performance.sql  operator_response_rate.sql  remelt_candidates.sql  score_history.sql  spuncast_ml_dashboard.json
scripts/: causal_analysis.py  run_pipeline.ps1  run_pipeline.sh  score_heat_live.py
spuncast_ml/: __init__.py  __main__.py  cli.py  contract.py  dataset.py  db.py  feedback.py  inference.py  modeling.py  monitoring.py  promotion.py  recommendations_archive.py  reporting.py
spuncast_ml/causal/: dag.py
spuncast_ml/causal/casual/: __init__.py  dag.py
spuncast_ml/contracts/: v_ml_heat_dataset_v1.json  v_ml_heat_early_score_v1.json
sql/: 068_ml_heat_early_score.sql  070_ml_scores.sql  071_heat_recommendations.sql  073_ml_heat_scores_explanation.sql  074_heat_recommendations_archive.sql
