[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spuncast-ml"
version = "0.1.0"
description = "Machine learning workflows for Spuncast heat-level scrap prediction."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "joblib>=1.4",
  "numpy>=1.26",
  "pandas>=2.2",
  "psycopg2-binary>=2.9",
  "pyarrow>=16.0",
  "python-dotenv>=1.0",
  "scikit-learn>=1.5",
]

[project.scripts]
spuncast-ml = "spuncast_ml.cli:main"

[tool.setuptools]
packages = ["spuncast_ml"]


[tool.setuptools.package-data]
spuncast_ml = ["contracts/*.json"]
