[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spuncast-ml"
version = "0.1.0"
description = "Machine learning workflows for Spuncast heat-level scrap prediction."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "joblib==1.4.2",
  "lightgbm==4.5.0",
  "numpy==1.26.4",
  "pandas==2.2.3",
  "psycopg2-binary==2.9.10",
  "pyarrow==16.1.0",
  "python-dotenv==1.0.1",
  "scikit-learn==1.4.2",
  "scipy==1.13.1",
  "shap==0.46.0",
  "threadpoolctl==3.5.0",
  "xgboost==2.1.3",
]

[project.scripts]
spuncast-ml = "spuncast_ml.cli:main"

[tool.setuptools]
packages = ["spuncast_ml"]


[tool.setuptools.package-data]
spuncast_ml = ["contracts/*.json"]
